# numbercaster

./: .gitignore  CMakeLists.txt  app.h  main.cpp  test.cpp  vcpkg-configuration.json  vcpkg.json
include/: types.hpp
src/: app.cpp  app.hpp  main.cpp
tests/: test.cpp
